# rust-gitconfig2json_cli

./: .appveyor.yml  .travis.yml  Cargo.toml  changelog.md  git-config-list-null.txt  readme.md
ci/: before_deploy.ps1  before_deploy.sh
src/: gitconfig2json.rs  main.rs
