[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "My striking module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "gitconfig2json_cli"
repository = "https://github.com/packsaddle/gitconfig2json_cli/"
version = "0.1.0"

[[bin]]
name = "gitconfig2json"
path = "src/main.rs"
[badges.appveyor]
project_name = "packsaddle/gitconfig2json_cli"
repository = "packsaddle/gitconfig2json_cli"

[badges.travis-ci]
repository = "packsaddle/gitconfig2json_cli"

[dependencies]
atty = "0.2.3"
clap = "2.27.1"
serde_json = "1.0.6"
