[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "Parse `git config --list --null` for cli"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "gitconfig2json_cli"
repository = "https://github.com/packsaddle/rust-gitconfig2json_cli/"
version = "0.1.0"

[[bin]]
name = "gitconfig2json"
path = "src/main.rs"
[badges.appveyor]
project_name = "sanemat/rust-gitconfig2json-cli"
repository = "packsaddle/rust-gitconfig2json_cli"

[badges.travis-ci]
repository = "packsaddle/rust-gitconfig2json_cli"

[dependencies]
atty = "0.2.3"
clap = "2.27.1"
gitconfig2json = { path = "../rust-gitconfig2json" }
